// Code generated by protoc-gen-proto-crud. DO NOT EDIT.
syntax = "proto3";
package example;
option go_package = "github.com/ehsundar/protoc-gen-proto-crud/example";

import "example/item.proto";

import "google/protobuf/empty.proto";

message GetItemRequest {
  int64 id = 1;
}

message GetItemResponse {
  Item item = 1;
}

message GetAllItemsResponse {
  repeated Item items = 1;
}

message CreateItemRequest {
  Item item = 1;
}

message CreateItemResponse {
  Item item = 1;
}

message UpdateItemRequest {
  int64 id = 1;
  Item item = 2;
}

message UpdateItemResponse {
  Item item = 1;
}

message DeleteItemRequest {
  int64 id = 1;
}

service ItemStorage {
  rpc GetItem(GetItemRequest) returns (GetItemResponse);
  rpc GetAllItems(google.protobuf.Empty) returns (GetAllItemsResponse);
  rpc CreateItem (CreateItemRequest) returns (CreateItemResponse);
  rpc UpdateItem (UpdateItemRequest) returns (UpdateItemResponse);
  rpc Delete(DeleteItemRequest) returns (google.protobuf.Empty);
}
